--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Drive App for document managment.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js",
-    "dev": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
