--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose-bcrypt": "^1.6.0",
     "mongoose-gridfs": "^0.6.2",
     "mongoose-immutable": "0.0.2",
+    "mongoose-trigger": "^1.0.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
