--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-cache-controller": "^1.1.0",
+    "gridfs-stream": "^1.1.1",
     "lodash.isnumber": "^3.0.3",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.15",
     "mongoose-bcrypt": "^1.6.0",
     "mongoose-gridfs": "^0.6.2",
     "mongoose-gridstore": "^0.1.25",
     "mongoose-immutable": "0.0.2",
     "mongoose-trigger": "^1.0.1",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "on-headers": "^1.0.2",
     "path": "^0.12.7",
     "read-blob": "^1.1.0",
