filemanagement almost done

--- a/www/images/desktop.ini
+++ b/www/images/desktop.ini
@@ -1,2 +1,6 @@
 [LocalizedFileNames]
 053-folder-upload.svg=@053-folder-upload.svg,0
+038-files-empty.svg=@038-files-empty.svg,0
+482-file-word.svg=@482-file-word.svg,0
+481-file-openoffice.svg=@481-file-openoffice.svg,0
+044-file-zip.svg=@044-file-zip.svg,0
