--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-cache-controller": "^1.1.0",
+    "express-rate-limit": "^5.0.0",
     "express-useragent": "^1.0.12",
     "file-system": "^2.2.2",
     "gridfs-stream": "^1.1.1",
+    "helmet": "^3.18.0",
     "lodash.isnumber": "^3.0.3",
     "method-override": "^3.0.0",
     "mongoose": "^5.4.15",
