--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.4",
     "express-cache-controller": "^1.1.0",
     "express-rate-limit": "^5.0.0",
+    "express-session": "^1.16.2",
     "express-useragent": "^1.0.12",
     "file-system": "^2.2.2",
     "gridfs-stream": "^1.1.1",
